--- a/angular/angular-template/angular.json
+++ b/angular/angular-template/angular.json
@@ -25,7 +25,7 @@
             ],
             "styles": [
 
-
+              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
               "node_modules/ngx-toastr/toastr.css",
