--- a/angular/angular-template/angular.json
+++ b/angular/angular-template/angular.json
@@ -24,8 +24,12 @@
               "src/assets"
             ],
             "styles": [
+
+              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+
+              "node_modules/ngx-toastr/toastr.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           },
@@ -124,6 +128,6 @@
   },
   "defaultProject": "angular-template",
   "cli": {
-    "analytics": "4886e4b0-cf1d-4f56-b47f-648ec602526a"
+    "analytics": "2712304c-5bef-423b-a8a8-67545bd41725"
   }
 }
