--- a/angular/angular-template/package.json
+++ b/angular/angular-template/package.json
@@ -23,7 +23,10 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@auth0/angular-jwt": "^5.0.2",
+    "@ngmodule/material-carousel": "^0.6.0",
+    "angular-bootstrap-md": "^13.0.0",
     "bootstrap": "^4.6.0",
+    "ng-uikit-pro-standard": "^1.0.0",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
