--- a/angular/angular-template/package.json
+++ b/angular/angular-template/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~9.0.7",
     "@angular/localize": "^13.3.3",
     "@angular/material": "^9.2.4",
@@ -26,6 +27,7 @@
     "@ngmodule/material-carousel": "^0.6.0",
     "angular-bootstrap-md": "^13.0.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.7.1",
     "ng-uikit-pro-standard": "^1.0.0",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
