--- a/angular/angular-template/package.json
+++ b/angular/angular-template/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.7",
     "@auth0/angular-jwt": "^5.0.2",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.7.1",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
