--- a/angular/angular-template/package.json
+++ b/angular/angular-template/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^3.7.1",
     "firebase": "^8.4.2",
+    "ngx-image-cropper": "^1.3.8",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
